# rokokot.github.io

./: .gitignore  CHANGELOG.md  LICENSE  README.md  deploy.sh  index.html  package.json  projects.html  research.html  rokokot-site.cabal  shindex.md  update-docs.sh
.github/workflows/: deploy.yml
_cache/: -1135148589923516228  -1354370747344528130  -1693275137979281888  -1702227860313546675  -179033802620319690  -231942070804121126  -2337365496783827135  -234168785882962442  -2353509484002761002  -2454216341908714137  -2510651674974737767  -2628226908979676173  -2660293523022656087  -267640345704623022  -2722765964185571281  -2952779497252824323  -3199854709813288094  -3297336965686659384  -3575449087688764480  -3608236991095638355  -3974415549901873513  -4188520587447884849  -4686315619827651469  -4728617038372355208  -4739330777601855456  -4778316446617896667  -4923610670541269158  -4924733640829130963  -5152796895696119073  -5185344883098693007  -5349826830768468887  -5509612769557858120  -558029508522707270  -5665707556078001688  -5861413568668647082  -5915259613668268757  -6069263512990193945  -6123604787086550452  -6271614370314410312  -6313472732280309873  (+77 more)
_deploy/: about.html  contact.html
css/: academic.css  main.css
projects/projects/: MQR.html  pictoNMT.html  qtyp-docs.html  qtype.html
site/: about.md  contact.md  index.html  index.md  publications.md  research.md
site/css/: academic.css  main.bak  main.css
site/js/: academic.js
site/projects/: MQR.md  TEMPLATE.md  pictoNMT.md  qtyp-docs.md  qtype.md
src/: Main.hs
tools/: deploy.sh  dev.sh
(+21 files in other folders)
